syntax = "proto3";
package commonpb;
option go_package = "github.com/bishopfox/sliver/protobuf/commonpb";

/*
  Generic protobuf messages
*/

message Empty {}

// Request - Common fields used in all gRPC requests
message Request {
  bool Async = 1;
  int64 Timeout = 2;

  uint32 SessionID = 9;
}
  
// Response - Common fields used in all gRPC responses. Note that this field
//            only used when the implant needs to return an error to the server.
//            Client<->Server comms should use normal gRPC error handling.
message Response {
  string Err = 1;
}

// File - A basic file data type
message File {
  string Name = 1;
  bytes Data = 2;
}

// Process - A basic process data type
message Process {
  int32 Pid = 1;
  int32 Ppid = 2;
  string Executable = 3;
  string Owner = 4;
}

// EnvVar - Environment variable K/V
message EnvVar {
  string Key = 1;
  string Value = 2;
}